Closed
Bug 586283
Opened 15 years ago
Closed 15 years ago
RecvLoadRemoteScript called before TabChild::InitTabChildGlobal finished
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
fennec | 2.0b1+ | --- |
People
(Reporter: romaxa, Unassigned)
References
Details
Attachments
(1 file)
1.39 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
We've got such problem when RecvLoadRemoteScript get called before mCx initialized.
It happens so:
RecvCreateWidget - initializing QGraphicsView (which is calling meegotouch plugin) and that is rotating native event loop.
when loop rotated, we are getting next async IPC call RecvLoadRemoteScript which is crashes because mCx not initialized (InitTabChildGlobal not called)
Ah, InitTabChildGlobal could happen earlier in RecvCreateWidget.
Or it could perhaps happen lazily in RecvLoadRemoteScript.
Updated•15 years ago
|
Reporter | ||
Comment 2•15 years ago
|
||
Attachment #468334 -
Flags: review?(Olli.Pettay)
Comment on attachment 468334 [details] [diff] [review]
Does it make sense ?
Yeah, this should work.
Attachment #468334 -
Flags: review?(Olli.Pettay) → review+
Updated•15 years ago
|
tracking-fennec: --- → 2.0b1+
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•