Bug 586283 - RecvLoadRemoteScript called before TabChild::InitTabChildGlobal finished.  Prevent event loop rotation problem, and RecvLoadRemoteScript call during RecvCreateWidget r=olli